2000-07-10  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh: Clarify the difference between the location of
	`aclocal.m4' and that of the location Autoconf extensions.
	(-M, --m4dir): New option.
	(aclocal_flags): Do not use $localdir, but $m4dir.
	(localdir_opt): Remove, since $autoconf, $autoheader already
	include `-l $localdir'.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* autoconf.sh (task install): We no longer use AC_INCLUDE.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* acoldnames.m4: Remove the obsolete comments.  The technology is
	now detailed in `autoupdate'.
	Quote the names being defined.
	Formatting changes.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_DEFUNCT): Remove.
	(AC_RSH, AC_UNISTD_H, AC_USG, AC_MEMORY_H, AC_DIR_HEADER,
	AC_INT_16_BITS, AC_LONG_64_BITS): They're alive!...
	* doc/autoconf.texi (Obsolete Macros): but not fresh.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh (debug): New variable.
	(tmp): s/ac/ar/.
	<options handling>: Support --debug.
	* doc/autoconf.texi: Adjust.

2000-07-10  Akim Demaille  <akim@epita.fr>

	Fix the bugs recently introduced in autoreconf.

	* autoreconf.sh: Don't run automake when the package is not using
	it.
	When checking whether autoheader should be rerun, don't ask
	config.h to be newer than stamp-h and vice-versa.
	Remove an unbalanced `fi'.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh (run_aclocal): Rename as `uses_aclocal' to avoid
	the convention clash with autoconf.sh where `run_foo' is the
	command to run `foo'.
	(uses_autoheader): New variable.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh (update.sh): New sub program.
	Use it in the whole process.
	(acconfig_h): New variable.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh <run_aclocal>: Use false/: instead of no/yes.
	Formatting and factoring changes.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh: You too can have a $tmp dir if you wish.